--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -6,6 +6,7 @@
 /* entire container, keeps perspective */
 .flip-container {
 	perspective: 1000px;
+  cursor: pointer;
 }
 	/* flip the pane when hovered */
 	.flip-container.flip .flipper {
@@ -44,4 +45,15 @@
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
+}
+
+.fuckYea {
+  background-image: url('../images/fuckYea.jpg');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.img-back, .back-detail, .fuckYea {
+  width: 100%;
+  height: 100%;
 }
