--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,3 +18,51 @@
 .p-b0 {
   padding-top: 0px;
 }
+
+.dot{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  z-index: 10;
+  transition: all 1s ease-out;
+  /*transform: scale(0.1);*/ /* /10 */
+  opacity: 0.9;
+}
+
+.anim{
+  transform: scale(10);
+}
+
+.final-card-layout {
+  position: absolute;
+  width: 45%;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  z-index: 11;
+  div:first-child {
+    height:85px;width:100%;margin-bottom: 40px;
+  }
+}
+
+#play-again {
+    position: absolute;
+    bottom: -75px;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: underline;
+    color: #4a4a4a;
+    cursor: pointer;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, 0%);
+}
+
+.hide {
+  display: none;
+}
