--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -1,5 +1,5 @@
 #fill-details-text {
-  color: #609a92;
+  color: $darkGreen;
   font-weight: 500;
   text-align: center;
 }
@@ -80,4 +80,26 @@
   p {
     color: red;
   }
+}
+
+#new-game {
+  color: $darkGreen;
+  font-size: 2rem;
+  text-decoration: underline;
+}
+
+#continue-as {
+  color: $secondaryColor;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#form-prompt {
+  text-align: center;
+  padding: 50px;
+  cursor: pointer;
+}
+
+#form-or {
+  padding: 1rem;
 }
