--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -47,13 +47,13 @@
 	transform: rotateY(180deg);
 }
 
-.fuckYea {
-  background-image: url('/fuckYea.jpg');
+.matched {
+  background-image: url('/matched.jpg');
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
 
-.img-back, .back-detail, .fuckYea {
+.img-back, .back-detail, .matched {
   width: 100%;
   height: 100%;
   background-size: cover;
