--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,10 @@ body {
   text-align: center;
 }
 
+.container {
+  width: 75vw;
+}
+
 .main-section {
   padding: 0px;
   background-color: #E6E7E9;
